update extract command to generate .po file

--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -87,6 +87,23 @@
   "Share details": "Share details",
   "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.": "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.",
   "Transaction history": "Transaction history",
+  "Privacy": "Privacy",
+  "Your privacy and your data’s security is extremely important to us. We understand how sensitive captable information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "Your privacy and your data’s security is extremely important to us. We understand how sensitive captable information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.",
+  "What we collect": "What we collect",
+  "Your login information <0/>Name, email, encrypted password": "Your login information <0/>Name, email, encrypted password",
+  "Company and captable information<0/>Names, addresses and stakes of each shareholder if you choose to enter them": "Company and captable information<0/>Names, addresses and stakes of each shareholder if you choose to enter them",
+  "General activity<0/>Name, time and which action you perform when using app.ledgy.com": "General activity<0/>Name, time and which action you perform when using app.ledgy.com",
+  "Device and browser specs<0/>In case a crash happens, so we can fix it as fast as possible": "Device and browser specs<0/>In case a crash happens, so we can fix it as fast as possible",
+  "Who we share it with": "Who we share it with",
+  "Your shareholders<0/>Their own stake in your company, no further details. Only if they are registered on Ledgy with the same email address you used to add them.": "Your shareholders<0/>Their own stake in your company, no further details. Only if they are registered on Ledgy with the same email address you used to add them.",
+  "Third-party integrations<0/>Which we use to run and improve our service for you. It contains no captable or other sensitive data. They are listed below.": "Third-party integrations<0/>Which we use to run and improve our service for you. It contains no captable or other sensitive data. They are listed below.",
+  "Ad networks": "Ad networks",
+  "Data resellers": "Data resellers",
+  "How we treat your data": "How we treat your data",
+  "Stored in the EU<0/>Your cap table data is stored at an <1>independent provider</1> in Paris.": "Stored in the EU<0/>Your cap table data is stored at an <1>independent provider</1> in Paris.",
+  "Backups<0/>Regular backups ensure nothing is ever lost.": "Backups<0/>Regular backups ensure nothing is ever lost.",
+  "Security<0/>Highest security standards give you peace of mind. <1>Read more</1>.": "Security<0/>Highest security standards give you peace of mind. <1>Read more</1>.",
+  "Deleting your personal data<0/>Please write to <1>contact@ledgy.com</1>.": "Deleting your personal data<0/>Please write to <1>contact@ledgy.com</1>.",
   "Documents & Reporting": "Documents & Reporting",
   "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.": "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.",
   "Make your cap table legally binding": "Make your cap table legally binding",
@@ -111,6 +128,17 @@
   "Convert to transactions": "Convert to transactions",
   "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.": "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.",
   "Convert financing round": "Convert financing round",
+  "Security": "Security",
+  "Your privacy and your data’s security is extremely important to us. We understand how sensitive captable information is for any business. Here is what we do to protect your data.": "Your privacy and your data’s security is extremely important to us. We understand how sensitive captable information is for any business. Here is what we do to protect your data.",
+  "If you have any questions, just <0>write us</0>.": "If you have any questions, just <0>write us</0>.",
+  "Strong passwords<0/>Users have to set a <1>very strong password</1>": "Strong passwords<0/>Users have to set a <1>very strong password</1>",
+  "Secure passwords<0/>Only transmitted/stored encrypted with battle-tested <1>bcrypt algorithm</1>": "Secure passwords<0/>Only transmitted/stored encrypted with battle-tested <1>bcrypt algorithm</1>",
+  "Two-factor authentication<0/>For an even better protection of accounts": "Two-factor authentication<0/>For an even better protection of accounts",
+  "Peer-reviewed code<0/>The code is always reviewed by at least one other engineer": "Peer-reviewed code<0/>The code is always reviewed by at least one other engineer",
+  "Server call rate limit<0/>The frequency of server calls is limited to prevent brute-force attacks": "Server call rate limit<0/>The frequency of server calls is limited to prevent brute-force attacks",
+  "Encrypted connection<0/>The site is accessible only through HTTPS (<1>A+ rating</1>)": "Encrypted connection<0/>The site is accessible only through HTTPS (<1>A+ rating</1>)",
+  "Content-Security-Policy<0/>HTTP headers prevent cross-site scripting and code injection (<1>A+ rating</1>)": "Content-Security-Policy<0/>HTTP headers prevent cross-site scripting and code injection (<1>A+ rating</1>)",
+  "Backups<0/>Daily backups ensure nothing is ever lost": "Backups<0/>Daily backups ensure nothing is ever lost",
   "Blog": "Blog",
   "Sign In": "Sign In",
   "Try it for free": "Try it for free",
