--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,4 +1,9 @@
 {
+  "Your privacy and your data’s security is extremely important to us. We understand how sensitive cap table information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "",
+  "Company and cap table information<0/>Names, addresses and stakes of each shareholder if you choose to enter them": "",
+  "Third-party integrations<0/>Which we use to run and improve our service for you. It contains no cap table or other sensitive data. They are listed below.": "",
+  "Your privacy and your data’s security is extremely important to us. We understand how sensitive cap table information is for any business. Here is what we do to protect your data.": "",
+  "Secure passwords<0/>Only transmitted/stored encrypted with the battle-tested <1>bcrypt algorithm</1>": "",
   "About us": "Über uns",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Lerne das Team hinter Ledgy kennen, welches dieses geniale Produkt entwickelt hat. Erfahre mehr über die Leute, die uns Vertrauen.",
   "Our mission": "Unsere Mission",
@@ -88,15 +93,12 @@
   "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.": "Der Transaktionsverlauf zeigt dir genau an, was zu welchem Zeitpunkt mit deine Aktien passiert ist. Verfolge wann du Aktien gekauft und verkauft hast, und zu welchem ​​Preis. Schau’ nach, welche Optionen du gerade besitzt oder wie hoch die Interest-Rate bei deinem Convertible ist und ob er einen Cap oder einen Discount hat.",
   "Transaction history": "Verlauf der Transaktionen",
   "Privacy": "",
-  "Your privacy and your data’s security is extremely important to us. We understand how sensitive captable information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "",
   "What we collect": "",
   "Your login information <0/>Name, email, encrypted password": "",
-  "Company and captable information<0/>Names, addresses and stakes of each shareholder if you choose to enter them": "",
   "General activity<0/>Name, time and which action you perform when using app.ledgy.com": "",
   "Device and browser specs<0/>In case a crash happens, so we can fix it as fast as possible": "",
   "Who we share it with": "",
   "Your shareholders<0/>Their own stake in your company, no further details. Only if they are registered on Ledgy with the same email address you used to add them.": "",
-  "Third-party integrations<0/>Which we use to run and improve our service for you. It contains no captable or other sensitive data. They are listed below.": "",
   "Ad networks": "",
   "Data resellers": "",
   "How we treat your data": "",
@@ -129,10 +131,8 @@
   "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.": "Sobald du mit der Finanzierungsrunde fertig bist, drücke den <0>Convert</0>-Button. Dadurch wird das Szenario in echten Transaktionen in deinem Aktienregister umgewandelt und für alle Mitgründer und Investoren sichtbar gemacht.",
   "Convert financing round": "Finanzierungsrunde umwandeln",
   "Security": "",
-  "Your privacy and your data’s security is extremely important to us. We understand how sensitive captable information is for any business. Here is what we do to protect your data.": "",
   "If you have any questions, just <0>write us</0>.": "",
   "Strong passwords<0/>Users have to set a <1>very strong password</1>": "",
-  "Secure passwords<0/>Only transmitted/stored encrypted with battle-tested <1>bcrypt algorithm</1>": "",
   "Two-factor authentication<0/>For an even better protection of accounts": "",
   "Peer-reviewed code<0/>The code is always reviewed by at least one other engineer": "",
   "Server call rate limit<0/>The frequency of server calls is limited to prevent brute-force attacks": "",
