--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,9 +1,5 @@
 {
-  "Your privacy and your data’s security is extremely important to us. We understand how sensitive cap table information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "",
-  "Company and cap table information<0/>Names, addresses and stakes of each shareholder if you choose to enter them": "",
-  "Third-party integrations<0/>Which we use to run and improve our service for you. It contains no cap table or other sensitive data. They are listed below.": "",
-  "Your privacy and your data’s security is extremely important to us. We understand how sensitive cap table information is for any business. Here is what we do to protect your data.": "",
-  "Secure passwords<0/>Only transmitted/stored encrypted with the battle-tested <1>bcrypt algorithm</1>": "",
+  "We don’t sell any data in general": "Wir verkaufen generell keine Daten",
   "About us": "Über uns",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Lerne das Team hinter Ledgy kennen, welches dieses geniale Produkt entwickelt hat. Erfahre mehr über die Leute, die uns Vertrauen.",
   "Our mission": "Unsere Mission",
@@ -75,6 +71,11 @@
   "Investor Dashboard": "Investoren-Dashboard",
   "the Investor Dashboard": "das Investoren-Dashboard",
   "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.": "Du bist Investor und möchtest einen Überblick über die Eckdaten deiner Portfoliounternehmen? Die Gründer sind zu beschäftigt und die Zahlen, die sie dir geben, unterscheiden sich von deinen eigenen Aufzeichnungen? <0/> Mit deinem Aktienregister auf Ledgy gibt es nur noch eine einzige “Single Source of Truth”. Überzeuge deine Unternehmen und du wirst keine Informationen über deine Investitionen mehr verpassen.",
+  "Privacy": "Datenschutz",
+  "We deeply care about your privacy. Your data only belongs to you.": "Deine Privatsphäre ist uns sehr wichtig. Deine persölichen Daten gehören dir.",
+  "Read more": "Mehr erfahren",
+  "Security": "Sicherheit",
+  "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Deine Daten sind bei uns sicher. Genieße die höchste Sicherheitsstandards.",
   "Illustrations by": "Illustrationen von",
   "Build trust in your cap table": "Schaffe Vertrauen in deinen Cap Table",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
@@ -92,20 +93,32 @@
   "Share details": "Aktiendetails",
   "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.": "Der Transaktionsverlauf zeigt dir genau an, was zu welchem Zeitpunkt mit deine Aktien passiert ist. Verfolge wann du Aktien gekauft und verkauft hast, und zu welchem ​​Preis. Schau’ nach, welche Optionen du gerade besitzt oder wie hoch die Interest-Rate bei deinem Convertible ist und ob er einen Cap oder einen Discount hat.",
   "Transaction history": "Verlauf der Transaktionen",
-  "Privacy": "",
-  "What we collect": "",
-  "Your login information <0/>Name, email, encrypted password": "",
-  "General activity<0/>Name, time and which action you perform when using app.ledgy.com": "",
-  "Device and browser specs<0/>In case a crash happens, so we can fix it as fast as possible": "",
-  "Who we share it with": "",
-  "Your shareholders<0/>Their own stake in your company, no further details. Only if they are registered on Ledgy with the same email address you used to add them.": "",
-  "Ad networks": "",
-  "Data resellers": "",
-  "How we treat your data": "",
-  "Stored in the EU<0/>Your cap table data is stored at an <1>independent provider</1> in Paris.": "",
-  "Backups<0/>Regular backups ensure nothing is ever lost.": "",
-  "Security<0/>Highest security standards give you peace of mind. <1>Read more</1>.": "",
-  "Deleting your personal data<0/>Please write to <1>contact@ledgy.com</1>.": "",
+  "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "Deine Privatsphäre und die Sicherheit deiner Daten sind uns sehr wichig. Uns ist klar, wie sensibel der Cap Table für jede Firma ist. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb präsentieren wir dir hier eine einfache, leicht verständliche Übersicht.",
+  "What we collect": "Was wir sammeln",
+  "Your login information": "Deine Login-Daten",
+  "Name, email, encrypted password": "Name, E-Mail, verschlüsseltes Passwort",
+  "Company information": "Firmendaten",
+  "Names, addresses, and stakes of each shareholder": "Namen, Adressen, und Anteile der jeweiligen Aktionäre",
+  "General activity": "Allgemeine Aktivität",
+  "Name, time, and which action you perform when using the app to understand and improve our service": "Name, Zeit, und welche Aktionen du ausführst, während du die App benutzt, damit wir unseren Dienst stets verbessern können",
+  "Device and browser specs": "Geräte- und Browserspezifikation",
+  "In case a crash happens, which helps us to fix it as fast as possible": "Falls unsere App abstürzt, damit wir den Fehler so schnell wie möglich beheben können",
+  "Who we share it with": "Mit wem wir es teilen",
+  "Your shareholders": "Deine Aktionäre",
+  "In case you add them with an email address, shareholders can see their own stake in your company. No further details.": "Falls du sie mit E-Mail-Adresse einträgst, können sie ihre eigenen Anteile in deiner Firma sehen. Keine weiteren Details.",
+  "Third-party integrations": "Integration von Drittanbietern",
+  "Which we use to run and improve our service for you. It contains no cap table or other sensitive data.": "Die wir benutzen, um unseren Dienst zu betreiben und für dich zu verbessen. Sie enthalten keine Daten zum Aktienregister oder andere sensible Informationen.",
+  "Ad networks": "Werbenetzwerke",
+  "We don’t sell any data for ads": "Wir verkaufen keine Daten für Werbung",
+  "Data resellers": "Data Resellers",
+  "How we treat your data": "Wie wir deine Daten behandeln",
+  "Stored in the EU": "Alle Daten in der EU",
+  "Your cap table data is stored at an <0>independent provider</0> in Paris, France": "Dein Aktienregister ist bei einem <0>unabhängigen Anbieter</0> in Frankreich, Paris gespeichert",
+  "Backups": "Backups",
+  "Regular backups ensure nothing is ever lost": "Regelmäßige Backups stellen sicher, dass niemals etwas verloren geht",
+  "Highest security standards give you peace of mind. <0>Read more  <1/></0>": "Dank höchsten Sicherheitsstandards wirst du immer ruhig schafen können. <0>Mehr erfahren <1/></0>",
+  "Deleting your personal data": "Deine persönlichen Daten löschen",
+  "Please <0>get in touch with us</0>": "Bitte <0>trete mit uns in Kontakt</0>",
   "Documents & Reporting": "Dokumente und Berichte",
   "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.": "Erspare dir die mühsame Arbeit beim Einfügen von Zahlen in Vorlagen. Automatisierte Dokumente und Berichte mit einem einzigen Klick.",
   "Make your cap table legally binding": "Mach’ dein Aktienregister rechtsgültig",
@@ -130,15 +143,23 @@
   "Convert to transactions": "Zu Transaktionen umwandeln",
   "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.": "Sobald du mit der Finanzierungsrunde fertig bist, drücke den <0>Convert</0>-Button. Dadurch wird das Szenario in echten Transaktionen in deinem Aktienregister umgewandelt und für alle Mitgründer und Investoren sichtbar gemacht.",
   "Convert financing round": "Finanzierungsrunde umwandeln",
-  "Security": "",
-  "If you have any questions, just <0>write us</0>.": "",
-  "Strong passwords<0/>Users have to set a <1>very strong password</1>": "",
-  "Two-factor authentication<0/>For an even better protection of accounts": "",
-  "Peer-reviewed code<0/>The code is always reviewed by at least one other engineer": "",
-  "Server call rate limit<0/>The frequency of server calls is limited to prevent brute-force attacks": "",
-  "Encrypted connection<0/>The site is accessible only through HTTPS (<1>A+ rating</1>)": "",
-  "Content-Security-Policy<0/>HTTP headers prevent cross-site scripting and code injection (<1>A+ rating</1>)": "",
-  "Backups<0/>Daily backups ensure nothing is ever lost": "",
+  "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. Here is what we do to protect your data.": "Deine Privatsphäre und die Sicherheit deiner Daten sind uns sehr wichig. Uns ist klar, wie sensibel der Cap Table für jede Firma ist. So schützen wir deine Daten:",
+  "Strong passwords": "Sichere Passwörter",
+  "Users have to set a <0>very strong password</0>": "Alle Nutzer müssen ein <0>extrem sicheres Passwort</0> wählen",
+  "Password encryption": "Passwort-Verschlüsselung",
+  "Stored encrypted with the battle-tested <0>bcrypt algorithm</0>": "Verschlüsselt mit dem bewährten <0>bcrypt-Algorithmus</0>",
+  "Two-factor authentication": "Zwei-Faktor-Authentifizierung",
+  "For an even better protection of accounts": "Für noch mehr Sicherheit der Nutzerkonten",
+  "Peer-reviewed code": "Code-Audits",
+  "The code is always reviewed by at least one other engineer": "Jede Zeile Code wir immer von mindestens einem weiteren Entwickler geprüft",
+  "Server call rate limit": "Limitierung der Server-Anfragen",
+  "The frequency of server calls is limited to prevent brute-force attacks": "Die Anzahl an Server-Anfragen ist beschränkt, um Brute-Force-Attacken zu verhindern",
+  "Encrypted connection": "Verschlüsselte Verbindung",
+  "The site is accessible only through HTTPS (<0>A+ rating</0>)": "Unsere Seite ist ausschließlich über HTTPS verfügbar (<0>A+-Rating</0>)",
+  "Content-Security-Policy": "Content-Security-Policy",
+  "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)": "HTTP-Header verhindern Cross-Site-Scripting und Code-Injection (<0>A+-Rating</0>)",
+  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass niemals etwas verloren geht",
+  "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "Falls du Fragen hast, oder dir irgendetwas Eigenartiges auffält, <0>kontaktiere uns</0>!",
   "Blog": "Blog",
   "Sign In": "Anmelden",
   "Try it for free": "Kostenlos ausprobieren",
