--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,4 +1,11 @@
 {
+  "Board and Advisors": "Board und Advisors",
+  "Send message": "Nachricht schicken",
+  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
+  "Cap table data is sensitive. That’s why we deeply care about your privacy.": "Cap table Daten sind vertraulich. Deshalb nehmen wir deine Privatsphäre sehr ernst. ",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre sehr ernst. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb findest du hier als allererstes eine einfache, leicht verständliche Übersicht.",
+  "Want to delete your data?": "Willst du deine Daten löschen?",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. Here is what we do to protect your data.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. So schützen wir deine Daten:",
   "About us": "Über uns",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Lerne das Team hinter Ledgy kennen, welches dieses geniale Produkt entwickelt hat. Erfahre mehr über die Leute, die uns Vertrauen.",
   "Our mission": "Unsere Mission",
@@ -8,7 +15,6 @@
   "Computer vision background, badminton guy, wants to build a space elevator": "Computer Vision Hintergrund, Badminton-Typ, will einen Weltraumlift bauen",
   "Battery science background, martial arts, fascinated by electric cars": "Hintergrund in Batteriewissenschaften, Martial Arts, fasziniert von Elektroautos",
   "Medical physics background, loves running, wondering about brain-machine interfaces": "Medical Physics-Hintergrund, liebt das Laufen und denkt über Brain-Machine Interfaces nach",
-  "Backed by some really cool investors": "Unterstützt von wirklich coolen Investoren",
   "Entrepreneur, Business Angel, Founder of Doodle.com": "Unternehmer, Business Angel, Gründer von Doodle.com",
   "Entrepreneur, Technologist, Founder of Doodle.com": "Unternehmer, Technologe, Gründer von Doodle.com",
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Gründer von Meisser Economics, Bitcoin Association Schweiz und Wuala",
@@ -36,8 +42,6 @@
   "Your name": "Dein Name",
   "Your email": "Deine E-Mail",
   "Your message": "Deine Nachricht",
-  "Send enquiry": "Abschicken",
-  "Give us a call or stop by our door anytime. We will do our best to answer all inquiries within 24 hours on business days.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
   "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
   "ESOP": "Mitarbeiterbeteiligung",
   "Keep your employees motivated at work. They deserve it. Ledgy's ESOP module will help you to make it happen.": "Motiviere deine Mitarbeiter bei der Arbeit. Sie verdienen es. Das ESOP-Modul von Ledgy wird dir dabei helfen.",
@@ -71,7 +75,6 @@
   "the Investor Dashboard": "das Investoren-Dashboard",
   "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.": "Du bist Investor und möchtest einen Überblick über die Eckdaten deiner Portfoliounternehmen? Die Gründer sind zu beschäftigt und die Zahlen, die sie dir geben, unterscheiden sich von deinen eigenen Aufzeichnungen? <0/> Mit deinem Aktienregister auf Ledgy gibt es nur noch eine einzige “Single Source of Truth”. Überzeuge deine Unternehmen und du wirst keine Informationen über deine Investitionen mehr verpassen.",
   "Privacy": "Datenschutz",
-  "We deeply care about your privacy. Your data only belongs to you.": "Deine Privatsphäre ist uns sehr wichtig. Deine persölichen Daten gehören dir.",
   "Read more": "Mehr erfahren",
   "Security": "Sicherheit",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Deine Daten sind bei uns sicher. Genieße die höchste Sicherheitsstandards.",
@@ -92,7 +95,6 @@
   "Share details": "Aktiendetails",
   "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.": "Der Transaktionsverlauf zeigt dir genau an, was zu welchem Zeitpunkt mit deine Aktien passiert ist. Verfolge wann du Aktien gekauft und verkauft hast, und zu welchem ​​Preis. Schau’ nach, welche Optionen du gerade besitzt oder wie hoch die Interest-Rate bei deinem Convertible ist und ob er einen Cap oder einen Discount hat.",
   "Transaction history": "Verlauf der Transaktionen",
-  "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "Deine Privatsphäre und die Sicherheit deiner Daten sind uns sehr wichig. Uns ist klar, wie sensibel der Cap Table für jede Firma ist. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb präsentieren wir dir hier eine einfache, leicht verständliche Übersicht.",
   "What we collect": "Was wir sammeln",
   "Your login information": "Deine Login-Daten",
   "Name, email, encrypted password": "Name, E-Mail, verschlüsseltes Passwort",
@@ -105,7 +107,7 @@
   "Who we share it with": "Mit wem wir es teilen",
   "Your shareholders": "Deine Aktionäre",
   "In case you add them with an email address, shareholders can see their own stake in your company. No further details.": "Falls du sie mit E-Mail-Adresse einträgst, können sie ihre eigenen Anteile in deiner Firma sehen. Keine weiteren Details.",
-  "Third-party integrations": "Integration von Drittanbietern",
+  "Third-party integrations": "Integrierte Drittanbieter",
   "Which we use to run and improve our service for you. It contains no cap table or other sensitive data.": "Die wir benutzen, um unseren Dienst zu betreiben und für dich zu verbessen. Sie enthalten keine Daten zum Aktienregister oder andere sensible Informationen.",
   "Ad networks": "Werbenetzwerke",
   "We don’t sell any data for ads": "Wir verkaufen keine Daten für Werbung",
@@ -115,10 +117,9 @@
   "Stored in the EU": "Alle Daten in der EU",
   "Your cap table data is stored at an <0>independent provider</0> in Paris, France": "Dein Aktienregister ist bei einem <0>unabhängigen Anbieter</0> in Frankreich, Paris gespeichert",
   "Backups": "Backups",
-  "Regular backups ensure nothing is ever lost": "Regelmäßige Backups stellen sicher, dass niemals etwas verloren geht",
+  "Regular backups ensure nothing is ever lost": "Regelmäßige Backups stellen sicher, dass nichts verloren gehen kann",
   "Highest security standards give you peace of mind. <0>Read more  <1/></0>": "Dank höchsten Sicherheitsstandards wirst du immer ruhig schafen können. <0>Mehr erfahren <1/></0>",
-  "Deleting your personal data": "Deine persönlichen Daten löschen",
-  "Please <0>get in touch with us</0>": "Bitte <0>trete mit uns in Kontakt</0>",
+  "Please <0>get in touch with us</0>": "<0>Kontaktiere</0> uns einfach",
   "Documents & Reporting": "Dokumente und Berichte",
   "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.": "Erspare dir die mühsame Arbeit beim Einfügen von Zahlen in Vorlagen. Automatisierte Dokumente und Berichte mit einem einzigen Klick.",
   "Make your cap table legally binding": "Mach’ dein Aktienregister rechtsgültig",
@@ -144,7 +145,6 @@
   "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.": "Sobald du mit der Finanzierungsrunde fertig bist, drücke den <0>Convert</0>-Button. Dadurch wird das Szenario in echten Transaktionen in deinem Aktienregister umgewandelt und für alle Mitgründer und Investoren sichtbar gemacht.",
   "Convert financing round": "Finanzierungsrunde umwandeln",
   "At Ledgy we take your security seriously. Strong passwords, solid encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.": "Wir bei Ledgy nehmen deine Sicherheit ernst. Sichere Passwörter, solide Verschlüsselung, Zwei-Factor-Authentifizierung, und permanente Code-Reviews gehören zu unserern hohen Sicherheitsstandards. Erfahre mehr darüber, warum du mit gutem Gewissen deinen Cap Table mit Ledgy verwalten kannst.",
-  "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. Here is what we do to protect your data.": "Deine Privatsphäre und die Sicherheit deiner Daten sind uns sehr wichig. Uns ist klar, wie sensibel der Cap Table für jede Firma ist. So schützen wir deine Daten:",
   "Strong passwords": "Sichere Passwörter",
   "Users have to set a <0>very strong password</0>": "Alle Nutzer müssen ein <0>extrem sicheres Passwort</0> wählen",
   "Password encryption": "Passwort-Verschlüsselung",
@@ -156,10 +156,10 @@
   "Server call rate limit": "Limitierung der Server-Anfragen",
   "The frequency of server calls is limited to prevent brute-force attacks": "Die Anzahl an Server-Anfragen ist beschränkt, um Brute-Force-Attacken zu verhindern",
   "Encrypted connection": "Verschlüsselte Verbindung",
-  "The site is accessible only through HTTPS (<0>A+ rating</0>)": "Unsere Seite ist ausschließlich über HTTPS verfügbar (<0>A+-Rating</0>)",
+  "The site is accessible only through HTTPS (<0>A+ rating</0>)": "Unsere Seite ist ausschließlich über HTTPS erreichbar (<0>A+-Rating</0>)",
   "Content-Security-Policy": "Content-Security-Policy",
   "HTTP headers prevent cross-site scripting and code injection (<0>A+ rating</0>)": "HTTP-Header verhindern Cross-Site-Scripting und Code-Injection (<0>A+-Rating</0>)",
-  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass niemals etwas verloren geht",
+  "Daily backups ensure nothing is ever lost": "Tägliche Backups stellen sicher, dass nichts verloren gehen kann",
   "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "Falls du Fragen hast, oder dir irgendetwas Eigenartiges auffält, <0>kontaktiere uns</0>!",
   "Blog": "Blog",
   "Sign In": "Anmelden",
