--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,4 +1,11 @@
 {
+  "Board and Advisors": "Board and Advisors",
+  "Send message": "Send message",
+  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.",
+  "Cap table data is sensitive. That’s why we deeply care about your privacy.": "Cap table data is sensitive. That’s why we deeply care about your privacy.",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.",
+  "Want to delete your data?": "Want to delete your data?",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. Here is what we do to protect your data.": "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. Here is what we do to protect your data.",
   "About us": "About us",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.",
   "Our mission": "Our mission",
@@ -8,7 +15,6 @@
   "Computer vision background, badminton guy, wants to build a space elevator": "Computer vision background, badminton guy, wants to build a space elevator",
   "Battery science background, martial arts, fascinated by electric cars": "Battery science background, martial arts, fascinated by electric cars",
   "Medical physics background, loves running, wondering about brain-machine interfaces": "Medical physics background, loves running, wondering about brain-machine interfaces",
-  "Backed by some really cool investors": "Backed by some really cool investors",
   "Entrepreneur, Business Angel, Founder of Doodle.com": "Entrepreneur, Business Angel, Founder of Doodle.com",
   "Entrepreneur, Technologist, Founder of Doodle.com": "Entrepreneur, Technologist, Founder of Doodle.com",
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala",
@@ -36,8 +42,6 @@
   "Your name": "Your name",
   "Your email": "Your email",
   "Your message": "Your message",
-  "Send enquiry": "Send enquiry",
-  "Give us a call or stop by our door anytime. We will do our best to answer all inquiries within 24 hours on business days.": "Give us a call or stop by our door anytime. We will do our best to answer all inquiries within 24 hours on business days.",
   "8008 Zurich, Switzerland": "8008 Zurich, Switzerland",
   "ESOP": "ESOP",
   "Keep your employees motivated at work. They deserve it. Ledgy's ESOP module will help you to make it happen.": "Keep your employees motivated at work. They deserve it. Ledgy's ESOP module will help you to make it happen.",
@@ -71,7 +75,6 @@
   "the Investor Dashboard": "the Investor Dashboard",
   "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.": "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.",
   "Privacy": "Privacy",
-  "We deeply care about your privacy. Your data only belongs to you.": "We deeply care about your privacy. Your data only belongs to you.",
   "Read more": "Read more",
   "Security": "Security",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Your data is safe with us. Enjoy the highest security standards. No kidding.",
@@ -92,7 +95,6 @@
   "Share details": "Share details",
   "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.": "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.",
   "Transaction history": "Transaction history",
-  "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.": "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. And we also know how little anyone likes to read long and difficult to understand privacy policies. That’s why we give you a human-readable overview up-front.",
   "What we collect": "What we collect",
   "Your login information": "Your login information",
   "Name, email, encrypted password": "Name, email, encrypted password",
@@ -117,7 +119,6 @@
   "Backups": "Backups",
   "Regular backups ensure nothing is ever lost": "Regular backups ensure nothing is ever lost",
   "Highest security standards give you peace of mind. <0>Read more  <1/></0>": "Highest security standards give you peace of mind. <0>Read more  <1/></0>",
-  "Deleting your personal data": "Deleting your personal data",
   "Please <0>get in touch with us</0>": "Please <0>get in touch with us</0>",
   "Documents & Reporting": "Documents & Reporting",
   "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.": "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.",
@@ -144,7 +145,6 @@
   "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.": "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.",
   "Convert financing round": "Convert financing round",
   "At Ledgy we take your security seriously. Strong passwords, solid encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.": "At Ledgy we take your security seriously. Strong passwords, solid encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.",
-  "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. Here is what we do to protect your data.": "Your privacy and your data’s security are extremely important to us. We understand how sensitive cap table information is for any business. Here is what we do to protect your data.",
   "Strong passwords": "Strong passwords",
   "Users have to set a <0>very strong password</0>": "Users have to set a <0>very strong password</0>",
   "Password encryption": "Password encryption",
