--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,11 +1,4 @@
 {
-  "Board and Advisors": "Board und Advisors",
-  "Send message": "Nachricht schicken",
-  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
-  "Cap table data is sensitive. That’s why we deeply care about your privacy.": "Cap table Daten sind vertraulich. Deshalb nehmen wir deine Privatsphäre sehr ernst. ",
-  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre sehr ernst. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb findest du hier als allererstes eine einfache, leicht verständliche Übersicht.",
-  "Want to delete your data?": "Willst du deine Daten löschen?",
-  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. Here is what we do to protect your data.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. So schützen wir deine Daten:",
   "About us": "Über uns",
   "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Lerne das Team hinter Ledgy kennen, welches dieses geniale Produkt entwickelt hat. Erfahre mehr über die Leute, die uns Vertrauen.",
   "Our mission": "Unsere Mission",
@@ -15,6 +8,7 @@
   "Computer vision background, badminton guy, wants to build a space elevator": "Computer Vision Hintergrund, Badminton-Typ, will einen Weltraumlift bauen",
   "Battery science background, martial arts, fascinated by electric cars": "Hintergrund in Batteriewissenschaften, Martial Arts, fasziniert von Elektroautos",
   "Medical physics background, loves running, wondering about brain-machine interfaces": "Medical Physics-Hintergrund, liebt das Laufen und denkt über Brain-Machine Interfaces nach",
+  "Board and Advisors": "Board und Advisors",
   "Entrepreneur, Business Angel, Founder of Doodle.com": "Unternehmer, Business Angel, Gründer von Doodle.com",
   "Entrepreneur, Technologist, Founder of Doodle.com": "Unternehmer, Technologe, Gründer von Doodle.com",
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Gründer von Meisser Economics, Bitcoin Association Schweiz und Wuala",
@@ -42,6 +36,8 @@
   "Your name": "Dein Name",
   "Your email": "Deine E-Mail",
   "Your message": "Deine Nachricht",
+  "Send message": "Nachricht schicken",
+  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
   "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
   "ESOP": "Mitarbeiterbeteiligung",
   "Keep your employees motivated at work. They deserve it. Ledgy's ESOP module will help you to make it happen.": "Motiviere deine Mitarbeiter bei der Arbeit. Sie verdienen es. Das ESOP-Modul von Ledgy wird dir dabei helfen.",
@@ -75,12 +71,14 @@
   "the Investor Dashboard": "das Investoren-Dashboard",
   "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.": "Du bist Investor und möchtest einen Überblick über die Eckdaten deiner Portfoliounternehmen? Die Gründer sind zu beschäftigt und die Zahlen, die sie dir geben, unterscheiden sich von deinen eigenen Aufzeichnungen? <0/> Mit deinem Aktienregister auf Ledgy gibt es nur noch eine einzige “Single Source of Truth”. Überzeuge deine Unternehmen und du wirst keine Informationen über deine Investitionen mehr verpassen.",
   "Privacy": "Datenschutz",
+  "Cap table data is sensitive. That’s why we deeply care about your privacy.": "Cap table Daten sind vertraulich. Deshalb nehmen wir deine Privatsphäre sehr ernst. ",
   "Read more": "Mehr erfahren",
   "Security": "Sicherheit",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Deine Daten sind bei uns sicher. Genieße die höchste Sicherheitsstandards.",
   "Illustrations by": "Illustrationen von",
   "Build trust in your cap table": "Schaffe Vertrauen in deinen Cap Table",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
+  "Try now. It’s free.": "Jetzt loslegen. Kostenlos.",
   "See the demo": "Teste die Demo",
   "Get Started": "Los geht’s",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
@@ -95,6 +93,7 @@
   "Share details": "Aktiendetails",
   "The transaction history will tell you exactly what happened to your shares at what time. Keep track of when you bought or sold shares and at which price. See which options you are currently holding or how much interest is currently on your convertible and whether there was a cap or discount.": "Der Transaktionsverlauf zeigt dir genau an, was zu welchem Zeitpunkt mit deine Aktien passiert ist. Verfolge wann du Aktien gekauft und verkauft hast, und zu welchem ​​Preis. Schau’ nach, welche Optionen du gerade besitzt oder wie hoch die Interest-Rate bei deinem Convertible ist und ob er einen Cap oder einen Discount hat.",
   "Transaction history": "Verlauf der Transaktionen",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre sehr ernst. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb findest du hier als allererstes eine einfache, leicht verständliche Übersicht.",
   "What we collect": "Was wir sammeln",
   "Your login information": "Deine Login-Daten",
   "Name, email, encrypted password": "Name, E-Mail, verschlüsseltes Passwort",
@@ -119,6 +118,7 @@
   "Backups": "Backups",
   "Regular backups ensure nothing is ever lost": "Regelmäßige Backups stellen sicher, dass nichts verloren gehen kann",
   "Highest security standards give you peace of mind. <0>Read more  <1/></0>": "Dank höchsten Sicherheitsstandards wirst du immer ruhig schafen können. <0>Mehr erfahren <1/></0>",
+  "Want to delete your data?": "Willst du deine Daten löschen?",
   "Please <0>get in touch with us</0>": "<0>Kontaktiere</0> uns einfach",
   "Documents & Reporting": "Dokumente und Berichte",
   "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips.": "Erspare dir die mühsame Arbeit beim Einfügen von Zahlen in Vorlagen. Automatisierte Dokumente und Berichte mit einem einzigen Klick.",
@@ -145,6 +145,7 @@
   "As soon as you’re done with your financing round, hit the <0>Convert</0> button. This will transform the scenario into real transactions for your share register and make it visible to all shareholders and investors.": "Sobald du mit der Finanzierungsrunde fertig bist, drücke den <0>Convert</0>-Button. Dadurch wird das Szenario in echten Transaktionen in deinem Aktienregister umgewandelt und für alle Mitgründer und Investoren sichtbar gemacht.",
   "Convert financing round": "Finanzierungsrunde umwandeln",
   "At Ledgy we take your security seriously. Strong passwords, solid encryption, two-factor authentication, and permanent code reviews are among our high safety standards. Find out more about why you can have peace-of-mind while managing your cap table with Ledgy.": "Wir bei Ledgy nehmen deine Sicherheit ernst. Sichere Passwörter, solide Verschlüsselung, Zwei-Factor-Authentifizierung, und permanente Code-Reviews gehören zu unserern hohen Sicherheitsstandards. Erfahre mehr darüber, warum du mit gutem Gewissen deinen Cap Table mit Ledgy verwalten kannst.",
+  "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. Here is what we do to protect your data.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. So schützen wir deine Daten:",
   "Strong passwords": "Sichere Passwörter",
   "Users have to set a <0>very strong password</0>": "Alle Nutzer müssen ein <0>extrem sicheres Passwort</0> wählen",
   "Password encryption": "Passwort-Verschlüsselung",
@@ -163,8 +164,7 @@
   "If you have any questions or discover anything suspicious, please <0>get in touch with us</0>.": "Falls du Fragen hast, oder dir irgendetwas Eigenartiges auffält, <0>kontaktiere uns</0>!",
   "Blog": "Blog",
   "Sign In": "Anmelden",
-  "Try it for free": "Kostenlos ausprobieren",
-  "Already using Ledgy?": "Verwendest du schon Ledgy?",
+  "Already using Ledgy?": "Du verwendest schon Ledgy?",
   "Sign in": "Anmelden",
   "Company": "Firma",
   "Product": "Produkt",
