--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -8,7 +8,8 @@
   "Reporting": "Reporting",
   "Investors": "Investoren",
   "Enter your email…": "E-Mail-Adresse eingeben…",
-  "Sign Up Free": "Kostenlos anmelden",
+  "<0/> Signing up…": "<0/> Anmelden…",
+  "Get Started": "Los geht’s",
   "Oops. This email address is invalid.": "Ups. Diese E-Mail-Adresse ist leider ungültig.",
   "About us": "Über uns",
   "Blog": "Blog",
@@ -122,7 +123,6 @@
   "Illustrations by": "Illustrationen von",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
   "See the demo": "Teste die Demo",
-  "Get Started": "Los geht’s",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
   "You’re in good company": "Du befindest dich in guter Gesellschaft",
   "Many successful companies already use Ledgy to keep track of their share register.": "Viele erfolgreiche Unternehmen nutzen bereits Ledgy, um ihr Aktienregister zu verwalten.",
