--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -8,7 +8,8 @@
   "Reporting": "Reporting",
   "Investors": "Investors",
   "Enter your email…": "Enter your email…",
-  "Sign Up Free": "Sign Up Free",
+  "<0/> Signing up…": "<0/> Signing up…",
+  "Get Started": "Get Started",
   "Oops. This email address is invalid.": "Oops. This email address is invalid.",
   "About us": "About us",
   "Blog": "Blog",
@@ -122,7 +123,6 @@
   "Illustrations by": "Illustrations by",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.",
   "See the demo": "See the demo",
-  "Get Started": "Get Started",
   "Screenshot of the Ledgy app": "Screenshot of the Ledgy app",
   "You’re in good company": "You’re in good company",
   "Many successful companies already use Ledgy to keep track of their share register.": "Many successful companies already use Ledgy to keep track of their share register.",
