add imprint to contact page (#59)
* add imprint to contact page

* Fix translation of "Contact"

--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -7,9 +7,9 @@
   "ESOP": "Mitarbeiterbeteiligung",
   "Reporting": "Reporting",
   "Investors": "Investoren",
-  "Enter your email…": "E-Mail-Adresse eingeben…",
   "<0/> Signing up…": "<0/> Anmelden…",
   "Get Started": "Los geht’s",
+  "Enter your email…": "E-Mail-Adresse eingeben…",
   "Oops. This email address is invalid.": "Ups. Diese E-Mail-Adresse ist leider ungültig.",
   "About us": "Über uns",
   "Blog": "Blog",
@@ -19,7 +19,7 @@
   "Company": "Firma",
   "Privacy": "Datenschutz",
   "Security": "Sicherheit",
-  "Contact": "Kontakt",
+  "Contact & Imprint": "Kontakt & Impressum",
   "Product": "Produkt",
   "Build trust in your cap table": "Schaffe Vertrauen in deinen Cap Table",
   "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!": "Verwalte deinen Cap Table, nicht dein Excel. Ledgy ist der perfekte Ort, an dem du den Verlauf deiner Aktien verfolgen, deine ESOPs verwalten, und die nächste Finanzierungsrunde simulieren kannst. Genieße ein garantiert fehlerloses Aktienregister und motiviere deine Mitarbeiter und Investoren. Jetzt Gratis Testen!",
@@ -38,14 +38,17 @@
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Gründer von Meisser Economics, Bitcoin Association Schweiz und Wuala",
   "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch": "Investor & Berater (Farmy.ch, Flatfox.ch), Gründer von Students.ch",
   "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch": "M&A- und Private-Equity-Anwältin mit Schwerpunkt auf Start-up Beratung, Smartuplaw.ch",
+  "Contact": "Kontakt",
   "Let’s Get In Touch": "Wir sind für dich da",
   "Here are the ways you can contact us with any questions you have": "Hier sind die Möglichkeiten, wie du uns bei Fragen kontaktieren kannst",
   "Your name": "Dein Name",
   "Your email": "Deine E-Mail",
   "Your message": "Deine Nachricht",
   "Send message": "Nachricht schicken",
-  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
-  "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
+  "Imprint": "Impressum",
+  "Switzerland": "Schweiz",
+  "VAT number": "VAT-Nummer",
+  "Managing directors": "Geschäftsleitung",
   "Track the complete history of your shares. Integrated consistency checks will guarantee that your cap table is error-free.": "Verfolge die komplette Historie deiner Aktien. Integrierte Konsistenzprüfungen garantieren, dass dein Aktienregister fehlerfrei ist.",
   "Guaranteed error-free": "Garantiert fehlerfrei",
   "Replace your Excel with Ledgy": "Ersetze dein Excel mit Ledgy",
@@ -121,6 +124,8 @@
   "Read more": "Mehr erfahren",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Deine Daten sind bei uns sicher. Genieße die höchste Sicherheitsstandards.",
   "Illustrations by": "Illustrationen von",
+  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
+  "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
   "See the demo": "Teste die Demo",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
