--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -7,9 +7,9 @@
   "ESOP": "ESOP",
   "Reporting": "Reporting",
   "Investors": "Investors",
-  "Enter your email…": "Enter your email…",
   "<0/> Signing up…": "<0/> Signing up…",
   "Get Started": "Get Started",
+  "Enter your email…": "Enter your email…",
   "Oops. This email address is invalid.": "Oops. This email address is invalid.",
   "About us": "About us",
   "Blog": "Blog",
@@ -19,7 +19,7 @@
   "Company": "Company",
   "Privacy": "Privacy",
   "Security": "Security",
-  "Contact": "Contact",
+  "Contact & Imprint": "Contact & Imprint",
   "Product": "Product",
   "Build trust in your cap table": "Build trust in your cap table",
   "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!": "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!",
@@ -38,14 +38,17 @@
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala",
   "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch": "Investor & Consultant (Farmy.ch, Flatfox.ch), Founder of Students.ch",
   "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch": "M&A and Private Equity Lawyer with a focus on start-up legal advise, Smartuplaw.ch",
+  "Contact": "Contact",
   "Let’s Get In Touch": "Let’s Get In Touch",
   "Here are the ways you can contact us with any questions you have": "Here are the ways you can contact us with any questions you have",
   "Your name": "Your name",
   "Your email": "Your email",
   "Your message": "Your message",
   "Send message": "Send message",
-  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.",
-  "8008 Zurich, Switzerland": "8008 Zurich, Switzerland",
+  "Imprint": "Imprint",
+  "Switzerland": "Switzerland",
+  "VAT number": "VAT number",
+  "Managing directors": "Managing directors",
   "Track the complete history of your shares. Integrated consistency checks will guarantee that your cap table is error-free.": "Track the complete history of your shares. Integrated consistency checks will guarantee that your cap table is error-free.",
   "Guaranteed error-free": "Guaranteed error-free",
   "Replace your Excel with Ledgy": "Replace your Excel with Ledgy",
@@ -121,6 +124,8 @@
   "Read more": "Read more",
   "Your data is safe with us. Enjoy the highest security standards. No kidding.": "Your data is safe with us. Enjoy the highest security standards. No kidding.",
   "Illustrations by": "Illustrations by",
+  "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.",
+  "8008 Zurich, Switzerland": "8008 Zurich, Switzerland",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.",
   "See the demo": "See the demo",
   "Screenshot of the Ledgy app": "Screenshot of the Ledgy app",
