--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,4 +1,6 @@
 {
+  "Customizable PDF Reports": "Customizable PDF Reports",
+  "CSV Export": "CSV Export",
   "Learn more about": "Learn more about",
   "Features": "Features",
   "Discover more about Ledgy": "Discover more about Ledgy",
@@ -11,11 +13,13 @@
   "Get Started": "Get Started",
   "Enter your email…": "Enter your email…",
   "Oops. This email address is invalid.": "Oops. This email address is invalid.",
+  "Pricing": "Pricing",
   "About us": "About us",
   "Blog": "Blog",
   "Sign In": "Sign In",
   "Try Ledgy now. It’s free.": "Try Ledgy now. It’s free.",
   "Still hesitating? <0>Learn more about our features</0>.": "Still hesitating? <0>Learn more about our features</0>.",
+  "Or have a quick look at our <0>live Demo</0>.": "Or have a quick look at our <0>live Demo</0>.",
   "Company": "Company",
   "Privacy": "Privacy",
   "Security": "Security",
@@ -127,11 +131,40 @@
   "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.",
   "8008 Zurich, Switzerland": "8008 Zurich, Switzerland",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.",
+  "Try Ledgy now. It’s <0>free</0>.": "Try Ledgy now. It’s <0>free</0>.",
   "See the demo": "See the demo",
   "Screenshot of the Ledgy app": "Screenshot of the Ledgy app",
   "You’re in good company": "You’re in good company",
   "Many successful companies already use Ledgy to keep track of their share register.": "Many successful companies already use Ledgy to keep track of their share register.",
   "Find out why they trust us": "Find out why they trust us",
+  "Ledgy is free.": "Ledgy is free.",
+  "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.",
+  "In case you came here looking for fancy option plans, we got you covered:": "In case you came here looking for fancy option plans, we got you covered:",
+  "3 Dude(tte)s in a Garage": "3 Dude(tte)s in a Garage",
+  "$0": "$0",
+  "Full Transaction History": "Full Transaction History",
+  "Consistency Checks": "Consistency Checks",
+  "Convertible Loans": "Convertible Loans",
+  "Unlimited Share Classes": "Unlimited Share Classes",
+  "Transaction Filters": "Transaction Filters",
+  "Numbered shares": "Numbered shares",
+  "Up to 20 shareholders": "Up to 20 shareholders",
+  "Best choice": "Best choice",
+  "Fast-growing Startup": "Fast-growing Startup",
+  "Employee Incentives": "Employee Incentives",
+  "Vesting Schedules": "Vesting Schedules",
+  "Fully-diluted View": "Fully-diluted View",
+  "Employee Login": "Employee Login",
+  "Stock Split": "Stock Split",
+  "Unlimited shareholders": "Unlimited shareholders",
+  "Unicorn": "Unicorn",
+  "Cap Table Import": "Cap Table Import",
+  "Document Management": "Document Management",
+  "Automated Tax Reports": "Automated Tax Reports",
+  "Multiple Administrators": "Multiple Administrators",
+  "Two-Factor Authentication": "Two-Factor Authentication",
+  "Audit Trails": "Audit Trails",
+  "24/7 Support": "24/7 Support",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.",
   "What we collect": "What we collect",
   "Your login information": "Your login information",
