--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -11,11 +11,13 @@
   "Get Started": "Los geht’s",
   "Enter your email…": "E-Mail-Adresse eingeben…",
   "Oops. This email address is invalid.": "Ups. Diese E-Mail-Adresse ist leider ungültig.",
+  "Pricing": "Preise",
   "About us": "Über uns",
   "Blog": "Blog",
   "Sign In": "Anmelden",
   "Try Ledgy now. It’s free.": "Jetzt mit Ledgy loslegen. Kostenlos.",
   "Still hesitating? <0>Learn more about our features</0>.": "Noch am zögern? <0>Erfahre mehr über unsere Funktionen</0>.",
+  "Or have a quick look at our <0>live Demo</0>.": "Oder wirf’ einen kurzen Blick auf unsere <0>Live-Demo</0>",
   "Company": "Firma",
   "Privacy": "Datenschutz",
   "Security": "Sicherheit",
@@ -127,11 +129,42 @@
   "Give us a call or stop by our door anytime. If you can’t reach us, we will get back to you as fast as possible.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
   "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
+  "Try Ledgy now. It’s <0>free</0>.": "Jetzt mit Ledgy loslegen. <0>Kostenlos</0>.",
   "See the demo": "Teste die Demo",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
   "You’re in good company": "Du befindest dich in guter Gesellschaft",
   "Many successful companies already use Ledgy to keep track of their share register.": "Viele erfolgreiche Unternehmen nutzen bereits Ledgy, um ihr Aktienregister zu verwalten.",
   "Find out why they trust us": "Warum sie uns vertrauen",
+  "Ledgy is free.": "Ledgy ist kostenlos.",
+  "Our goal is to truly benefit founders at work. We want to give as many people as possible access to our online cap table solution. At our current stage, we consider it more valuable to really understand our users’ needs than adding a few numbers to our bank account. Nevertheless, we leave it open to introduce paid premium features in the future. But the basic version will always remain free of charge.": "Unser Bestreben ist, Gründern das Leben zu erleichtern. Wir wollen so vielen Menschen wie möglich unsere Cap Table-Lösung zur Verfügung stellen. In der aktuellen Phase ist es uns lieber, die Bedürfnisse unserer Nutzer zu verstehen, als ein paar Zahlen auf unser Bankkonto zu schreiben. Wir behalten uns vor, in Zukunft kostenpflichtige Premium-Funktionen einzuführen. Die Grundversion der Software wird jedoch für immer kostenlos bleiben.",
+  "In case you came here looking for fancy option plans, we got you covered:": "Du hast eine Übersicht über die verschiedenen Tarife erwartet? Wir haben für dich gesorgt:",
+  "3 Dude(tte)s in a Garage": "3 Leute in einer Garage",
+  "$0": "0 €",
+  "Full Transaction History": "Vollständiger Transaktionsverlauf",
+  "Consistency Checks": "Konsistenz-Checks",
+  "Convertible Loans": "Wandeldarlehen",
+  "Customizable PDF Reports": "Anpassbare PDF-Reports",
+  "Unlimited Share Classes": "Unbegrenzte Aktienklassen",
+  "Transaction Filters": "Filter für Transaktionen",
+  "Numbered shares": "Aktiennummern",
+  "Up to 20 shareholders": "Bis zu 20 Aktionäre",
+  "Best choice": "Beste Wahl",
+  "Fast-growing Startup": "Fast-growing Startup",
+  "Employee Incentives": "Mitarbeiterbeteiligungen",
+  "Vesting Schedules": "Vesting-Pläne",
+  "Fully-diluted View": "Fully diluted-Ansicht",
+  "Employee Login": "Mitarbeiter-Login",
+  "Stock Split": "Aktiensplit",
+  "Unlimited shareholders": "Unbegrenzte Anzahl Aktionäre",
+  "Unicorn": "Unicorn",
+  "Cap Table Import": "Cap Table-Import",
+  "Document Management": "Dokumentenverwaltung",
+  "Automated Tax Reports": "Automatische Steuerbescheinigungen",
+  "Multiple Administrators": "Mehrere Administratoren",
+  "CSV Export": "CSV-Export",
+  "Two-Factor Authentication": "Zwei-Faktor-Authentifizierung",
+  "Audit Trails": "Audit-Trail",
+  "24/7 Support": "24/7-Support",
   "We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is extremely important to us. And we also know how little anyone likes to read long and difficult to understand privacy policies. So we give you a human-readable overview up-front.": "Uns ist bewusst, wie sensibel und vertraulich der Cap Table für jede Firma ist. Deshalb nehmen wir deine Privatsphäre sehr ernst. Und wir wissen auch, wie mühsam es ist, lange und schwer verständliche Datenschutzerklärungen zu lesen. Deshalb findest du hier als allererstes eine einfache, leicht verständliche Übersicht.",
   "What we collect": "Was wir sammeln",
   "Your login information": "Deine Login-Daten",
